Small change in the template.

--- a/dada/DADA/Template/templates/admin_menu_widget.tmpl
+++ b/dada/DADA/Template/templates/admin_menu_widget.tmpl
@@ -43,7 +43,7 @@
 	<!-- tmpl_if SUBNAV -->
 		  <ul>
 		   
-		<!-- tmpl_loop name="SUBNAV" -->
+		<!-- tmpl_loop SUBNAV -->
 
 	 <!-- tmpl_unless Activated --> 
 	    <!-- tmpl_if hide_nav --> 
