s/Subscriber Fields/Subscriber Profile Fields/

--- a/dada/DADA/Template/templates/html_code_screen.tmpl
+++ b/dada/DADA/Template/templates/html_code_screen.tmpl
@@ -22,7 +22,7 @@ JavaScript</legend>
 
 
 <p>
- The embedded JavaScript code will automatically update if you choose to add/remove any subscriber fields or change your mailing list preferences.
+ The embedded JavaScript code will automatically update if you choose to add/remove any Subscriber Profile Fields or change your mailing list preferences.
 </p>
 
 
