--- a/dada/DADA/Template/templates/partial_sending_options_widget.tmpl
+++ b/dada/DADA/Template/templates/partial_sending_options_widget.tmpl
@@ -138,7 +138,7 @@
     
 <!-- tmpl_else --> 
 
-    <!-- Multiple Subscriber Fields isn't support with this backend (Apparently) --> 
+    <!-- Multiple Subscriber Profile Fields isn't support with this backend (Apparently) --> 
 
 <!-- /tmpl_if --> 
 
