--- a/dada/DADA/Template/templates/profile_home.tmpl
+++ b/dada/DADA/Template/templates/profile_home.tmpl
@@ -139,7 +139,7 @@ function confirm_profile_removal(form_name) {
 <fieldset> 
 	
 <legend>
-	Subscriber Fields
+	Subscriber Profile Fields
 </legend> 
 	<form action="<!-- tmpl_var PROGRAM_URL -->" method="post"> 
 		<input type="hidden" name="f"        value="profile" /> 
