--- a/dada/DADA/Template/templates/edit_subscribed_screen.tmpl
+++ b/dada/DADA/Template/templates/edit_subscribed_screen.tmpl
@@ -14,20 +14,26 @@
 <legend><!-- tmpl_var email escape="HTML" --></legend>
 
 
-
+<!-- tmpl_unless root_login --> 
+	<p class="error">
+		You must be logged in with the <!-- tmpl_var PROGRAM_NAME --> Root Password to be able to edit a Subscriber's Profile Fields. 
+	</p>
+<!-- tmpl_unless --> 
 <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post">
- <input type="hidden" name="email"   value="<!-- tmpl_var email escape="HTML" -->" />
- <input type="hidden" name="f"       value="edit_subscriber" />
- <input type="hidden" name="process" value="1" />
- <input type="hidden" name="type"    value="<!-- tmpl_var type -->" />
 
+<!-- tmpl_unless root_login --> 
+	 <input type="hidden" name="email"   value="<!-- tmpl_var email escape="HTML" -->" />
+	 <input type="hidden" name="f"       value="edit_subscriber" />
+	 <input type="hidden" name="process" value="1" />
+	 <input type="hidden" name="type"    value="<!-- tmpl_var type -->" />
+<!-- /tmpl_unless --> 
 
 <!-- tmpl_loop fields --> 
     <p>
      <label for="<!-- tmpl_var name escape=HTML -->" style="width: 7em;float: left;text-align: right;margin-right: 0.5em;display: block">
       <!-- tmpl_var name escape=HTML -->: 
      </label>
-    <input type="text" name="<!-- tmpl_var name escape=HTML -->" id="<!-- tmpl_var name escape=HTML -->" value="<!-- tmpl_var value escape=HTML -->"  />
+    <input type="text" name="<!-- tmpl_var name escape=HTML -->" id="<!-- tmpl_var name escape=HTML -->" value="<!-- tmpl_var value escape=HTML -->" <!-- tmpl_unless root_login -->disabled="disabled"<!-- /tmpl_unless --> />
     </p>
 <!--/tmpl_loop--> 
 
@@ -44,7 +50,7 @@
  <input type="hidden" name="f"       value="checker" />
  <input type="hidden" name="type"    value="<!-- tmpl_var type -->" />
  <div class="buttonfloat">
-  <input type="submit" value="Delete Address" class="alertive" />
+  <input type="submit" value="Unsubscribe Address From This List" class="alertive" />
  </div>
 </form>
 
