--- a/dada/DADA/Template/templates/setup_info_screen.tmpl
+++ b/dada/DADA/Template/templates/setup_info_screen.tmpl
@@ -143,14 +143,50 @@
 
 <div class="buttonfloat">
 	
-<input type="button" class="processing" value="Setup Dada Mail!"  onClick="external(['f__adv_dada_mail_setup', 'dada_files_dir__'+getVal('dada_files_dir'), 'root_pass__'+getVal('root_pass'), 'program_root_pass__'+getVal('program_root_pass'), 'NO_CACHE'], ['resultdiv'], 'POST');" /> 
+<input type="button" class="processing" value="Setup Dada Mail!"  onClick="setup_dada()" /> 
 </div> 
 <div class="floatclear"></div>
 
 </form> 
-
+<div id="loadingdiv" style="display:none">
+	<p class="positive">Loading...</p> 
+</div>
 <div id="resultdiv"></div>
+<script src="<!-- tmpl_var S_PROGRAM_URL -->/javascripts/prototype.js" type="text/javascript"></script>
+<script src="<!-- tmpl_var S_PROGRAM_URL -->/javascripts/scriptaculous.js" type="text/javascript"></script>
+<script type="text/javascript">
+    //<![CDATA[
 
+	 function setup_dada(){ 
+		new Ajax.Updater(
+			'resultdiv', '<!-- tmpl_var S_PROGRAM_URL -->', 
+			{ 
+			    method: 'post', 
+				parameters: {
+						process:                   1,
+						dada_files_dir:            $F('dada_files_dir'), 
+						root_pass:                 $F('root_pass'), 
+						program_root_pass:         $F('program_root_pass'),      
+						f:                         'adv_dada_mail_setup',
+					},
+					
+			onCreate: 	 function() {
+				$('resultdiv').hide(); 
+				$('loadingdiv').show();
+
+			},
+			onComplete: 	 function() {
+				
+				$('resultdiv').show(); 
+				$('loadingdiv').hide();
+
+			}
+			
+
+			});
+	}
+    //]]>
+</script>
 
 
 <!-- /tmpl_if --> 
