Mostly fixing rough edges

--- a/dada/DADA/Template/templates/multiple_list_sending_widget.tmpl
+++ b/dada/DADA/Template/templates/multiple_list_sending_widget.tmpl
@@ -10,7 +10,8 @@
 
 
     <fieldset>
-     <legend>
+     
+	 <legend>
        <a href="#" id="multiple_list_sending" onclick="toggleDisplay('multiple_list_sending_widget');return false;">
       +/- 
      </a>Multiple Mailing List Sending
@@ -36,15 +37,11 @@
 			   </a>
 			  </p>
 
-			 <div class="simplebox" style="max-height:150px;overflow:auto;"
+			 <div class="simplebox" style="max-height:150px;overflow:auto;">
 			  
-			  
-		
-		<!-- tmpl_var global_list_sending_checkbox_widget --> 
+				<!-- tmpl_var global_list_sending_checkbox_widget --> 
 	
-	
-	
-	 </div>
+	 		</div>
 	
 	  <p>
 	   <a href="#" onclick="SetListChecked(1);return false;">
