--- a/dada/DADA/Template/templates/default_admin_template.tmpl
+++ b/dada/DADA/Template/templates/default_admin_template.tmpl
@@ -5,14 +5,6 @@
  
  <head>
   <title><!-- tmpl_var title --> - <!-- tmpl_var list_settings.list_name --> - <!-- tmpl_var PROGRAM_NAME --></title>
-  <!-- tmpl_var javascript -->
-
-
-<script src="<!-- tmpl_var S_PROGRAM_URL -->/javascripts/prototype.js" type="text/javascript"></script>
-<script src="<!-- tmpl_var S_PROGRAM_URL -->/javascripts/scriptaculous.js" type="text/javascript"></script>
-
-
-
 
   <style type="text/css" media="all">
    <!--
@@ -20,6 +12,14 @@
    -->
   </style>
  
+<script src="<!-- tmpl_var S_PROGRAM_URL -->/javascripts/dada_mail_admin_js.js" type="text/javascript"></script>
+<script src="<!-- tmpl_var S_PROGRAM_URL -->/javascripts/prototype.js" type="text/javascript"></script>
+<script src="<!-- tmpl_var S_PROGRAM_URL -->/javascripts/scriptaculous.js" type="text/javascript"></script>
+<!-- tmpl_if FCKEDITOR_URL --> 
+	<script src="<!-- tmpl_var FCKEDITOR_URL -->/fckeditor.js" type="text/javascript"></script>
+<!-- /tmpl_if -->
+
+
  <meta http-equiv="Pragma"  content="no-cache" />
  <meta http-equiv="Expires" content="-1" />
 
@@ -64,4 +64,11 @@
   </div><!-- ends id="AdminPageWrapper" -->
  </body>
  
+<!-- tmpl_if comment --> 
+	Apparrently, putting js at the end of a doc, helps speed up rendering.
+	Hmm! 
+<!-- /tmpl_if --> 
+
+
+
 </html>
