--- a/dada/DADA/Template/templates/partial_sending_options_widget.tmpl
+++ b/dada/DADA/Template/templates/partial_sending_options_widget.tmpl
@@ -26,7 +26,7 @@
          <td> 
           <p>
            <strong>
-            <!-- tmpl_var name --> 
+            <!-- tmpl_var label -->:
            </strong> 
           </p>
          </td> 
