--- a/dada/DADA/Template/templates/partial_sending_options_widget.tmpl
+++ b/dada/DADA/Template/templates/partial_sending_options_widget.tmpl
@@ -76,7 +76,7 @@
 		 function get_partial_list(){ 
 			
 			var al         = new Array();; 
-			var alternative_list = ''; 
+			var alternative_lists = ''; 
 			var multi_list_send_no_dupes = 0; 
 			
 			/* Is there a prototype.js way of doing this? */
@@ -90,7 +90,7 @@
 				      	al.push(document.send_email.alternative_list[i].value);
 					 }
 				   }
-				alternative_list = al.join(','); 
+				alternative_lists = al.join(','); 
 			}
 				
 
@@ -105,7 +105,7 @@
 				    method: 'post', 
 					parameters: {
 						f:                        'previewMessageReceivers',
-						alternative_list:         alternative_list,
+						alternative_lists:         alternative_lists,
 						multi_list_send_no_dupes: multi_list_send_no_dupes,
 						
 						 <!-- tmpl_loop undotted_fields -->
