--- a/dada/DADA/Template/templates/multiple_list_sending_widget.tmpl
+++ b/dada/DADA/Template/templates/multiple_list_sending_widget.tmpl
@@ -53,8 +53,7 @@
 		   </a>
 		  </p>
 	
-		<!-- tmpl_if comment --> 
-		
+		<!-- tmpl_if MULTIPLE_LIST_SENDING_TYPE_INDIVIDUAL --> 
 			<p>
 			 <input type="checkbox" name="multi_list_send_no_dupes" id="multi_list_send_no_dupes" value="1" checked="checked" />
 		
@@ -64,9 +63,10 @@
 			<br /> 
 			Subscribers who have email addresses subscribed to more than one mailing list will receive only one copy of this message.
 		  </p>
+		<!-- tmpl_else --> 
+			<input type="hidden" name="multi_list_send_no_dupes" id="multi_list_send_no_dupes" value="1" />
 		<!-- /tmpl_if --> 
 		
-		<input type="hidden" name="multi_list_send_no_dupes" id="multi_list_send_no_dupes" value="1" />
 		
 		</div> 
 	
