Added a small liner note to use the migration utility, now that there is such a thing.

--- a/dada/DADA/Template/templates/error_bad_SQL_setup_screen.tmpl
+++ b/dada/DADA/Template/templates/error_bad_SQL_setup_screen.tmpl
@@ -1,3 +1,7 @@
 <p>
  Check your SQL table setup. One or more tables appear to be either missing, or formatted incorrectly. 
 </p>
+
+<p>
+	If you've recently upgraded <!-- tmpl_var PROGRAM_NAME -->, make sure you've run any migration utilities needed. 
+</p>
