Edited the description on what a black list is.

--- a/dada/DADA/Template/templates/view_list_screen.tmpl
+++ b/dada/DADA/Template/templates/view_list_screen.tmpl
@@ -82,8 +82,8 @@
 	</p>
 	<p>
 	 You can also use the blacklist to match a part of an email address. 
-	 For example, adding '.com' to the blacklist will disallow 
-	 anyone that has '.com' in their email address.
+	 For example, adding 'example.com' to the blacklist will disallow 
+	 anyone that has 'example.com' in their email address.
 	</p>
 		
 	<!-- tmpl_if can_use_global_black_list --> 
