--- a/dada/DADA/Template/templates/send_email_screen.tmpl
+++ b/dada/DADA/Template/templates/send_email_screen.tmpl
@@ -108,10 +108,20 @@
          <p>
          <input type="file" name="attachment_1"  size="36" /><br /> 
          <input type="file" name="attachment_2"  size="36" /><br /> 
-         <input type="file" name="attachment_3"  size="36" /><br />          
+         <input type="file" name="attachment_3"  size="36" /><br />  
+         <!-- You can continue to add to this list, like so: 
+
+         <input type="file" name="attachment_4"  size="36" /><br />          
+         <input type="file" name="attachment_5"  size="36" /><br />          
+
+		Just reflect the number of attachments you have in the, "attachment" 
+		hidden form field, below: 
+		
+		--> 
+
          </p>
          
-	    <input type="hidden" name="attachment" value="1" />
+	    <input type="hidden" name="attachment" value="3" />
 
 </div> 
 
