This fixes that problem with the Subscribed Check Subscribers being disabled, and no one knowing how to enable it.

--- a/dada/DADA/Template/templates/add_email_screen.tmpl
+++ b/dada/DADA/Template/templates/add_email_screen.tmpl
@@ -527,7 +527,8 @@ Invalid Email Addresses
 
 	<!-- tmpl_else --> 
 	
-	<input type="button" class="disabled" disabled="disabled"  name="process"  value="Subscribe Checked Subscribers (Disabled) >>"  onclick="return warnAboutMassSubscription(this.form);" />
+	<input type="button" class="disabled" disabled="disabled"  name="process"  value="Subscribe Checked Subscribers (Disabled) >>" />
+	<div class="alert" style="text-align:right">(The, <strong>Subscribe Checked Subscribers</strong> button can be enabled in: <a href="<!-- tmpl_var S_PROGRAM_URL -->?f=list_cp_options">Your List Control Panel -&gt; Options</a>)</div> 
 		
 	<!-- /tmpl_if --> 
 	
