s/Send a List Message/Send a Message/g;

--- a/dada/DADA/Template/templates/list_cp_options.tmpl
+++ b/dada/DADA/Template/templates/list_cp_options.tmpl
@@ -109,7 +109,7 @@ List Message Sending Screens
 				This will take affect in the following screens: 
 				<ul> 
 					<li>
-						Send a List Message
+						Send a Message
 					</li>
 					<li>
 						Send a Webpage
