--- a/dada/DADA/Template/templates/message_headers_fieldset_widget.tmpl
+++ b/dada/DADA/Template/templates/message_headers_fieldset_widget.tmpl
@@ -182,8 +182,8 @@
 <p>
 		  <strong>
 		   <a href="#" onclick="toggleDisplay('headers');return false;">
-			+/- Headers
-		   </a>
+			+/-
+		   </a> Headers
 		  </strong>
 </p>
 
