I basically took out the functionality to show if your the list owner. I'll return to that, soon.

--- a/dada/DADA/Template/templates/profile_home.tmpl
+++ b/dada/DADA/Template/templates/profile_home.tmpl
@@ -185,13 +185,16 @@ Your Mailing List Subscriptions
 
 <!-- tmpl_loop subscriptions --> 
 
-	<h2>
-		<a href="<!-- tmpl_var PROGRAM_URL -->/list/<!-- tmpl_var list_settings.list -->">
-			<!-- tmpl_var list_settings.list_name --> 
-		</a>
-	</h2>
+	
 
 	<!-- tmpl_if subscribed --> 
+	
+		<h2>
+			<a href="<!-- tmpl_var PROGRAM_URL -->/list/<!-- tmpl_var list_settings.list -->">
+				<!-- tmpl_var list_settings.list_name --> 
+			</a>
+		</h2>
+	
 	
 	<div style="max-height: 200px; overflow: auto;background:#fff; padding:5px;border:1px solid black">
 		<p>
@@ -245,16 +248,30 @@ Your Mailing List Subscriptions
 </li>	
 </ul>
 
+
+
+	
+	<!-- tmpl_if comment --> 
+	
+		<!-- tmpl_if list_owner --> 
+		<p class="alert"> 
+			You are the List Owner. 
+			<a href="<!-- tmpl_var S_PROGRAM_URL -->/sign_in/<!-- tmpl_var list_settings.list -->/"> 
+				Login...
+			</a>  
+		</p>
+		<!-- /tmpl_if -->
+	
+	<!-- /tmpl_if -->
+	
+	
+	
+	
+
 	<!-- /tmpl_if --> 
 
-	<!-- tmpl_if list_owner --> 
-	<p class="alert"> 
-		You are the List Owner. 
-		<a href="<!-- tmpl_var S_PROGRAM_URL -->/sign_in/<!-- tmpl_var list_settings.list -->/"> 
-			Login...
-		</a>  
-	</p>
-	<!-- /tmpl_if --> 
+
+	
 	
 	
 <!-- /tmpl_loop -->
