Put a, "What's this?" link to explain the profile stuff.

--- a/dada/DADA/Template/templates/profile_widget.tmpl
+++ b/dada/DADA/Template/templates/profile_widget.tmpl
@@ -14,7 +14,7 @@
 
 			[<a href="<!-- tmpl_var PROGRAM_URL -->?f=profile">Profile Home</a> | <a href="<!-- tmpl_var PROGRAM_URL -->?f=profile_logout">Logout</a>]
 		<!-- tmpl_else --> 
-			[<a href="<!-- tmpl_var PROGRAM_URL -->?f=profile_login">Register/Log In</a>]
+			[<a href="<!-- tmpl_var PROGRAM_URL -->?f=profile_login">Profile Register/Log In</a>] (<a href="<!-- tmpl_var PROGRAM_URL -->?f=profile_help">What's This?</a>)
 		<!-- /tmpl_if --> 
 		
 
