Changing query strings to PATH_INFO's for the profile stuff and general cleaning up.

--- a/dada/DADA/Template/templates/profile_help.tmpl
+++ b/dada/DADA/Template/templates/profile_help.tmpl
@@ -18,7 +18,7 @@ and have subscription/unsubscription forms pre-filled out throughout <!-- tmpl_v
 </p> 
 
 <p>
-	<a href="<!-- tmpl_var PROGRAM_URL -->?f=profile_login">
+	<a href="<!-- tmpl_var PROGRAM_URL -->/profile_login/">
 		&lt;-- Back to Profile Login
 	</a> 
 </p>
