--- a/dada/DADA/Template/templates/profile_login.tmpl
+++ b/dada/DADA/Template/templates/profile_login.tmpl
@@ -3,7 +3,7 @@
 
 
 <p style="text-align:right">
-	<a href="<!-- tmpl_var PROGRAM_URL -->?f=profile_help">
+	<a href="<!-- tmpl_var PROGRAM_URL -->/profile_help/">
 		What are <!-- tmpl_var PROGRAM_NAME --> Profiles?
 	</a> 
 </p>
