--- a/dada/DADA/Template/templates/profile_widget.tmpl
+++ b/dada/DADA/Template/templates/profile_widget.tmpl
@@ -12,9 +12,9 @@
 		
 			Hello, <!-- tmpl_var profile.email -->
 
-			[<a href="<!-- tmpl_var PROGRAM_URL -->?f=profile">Profile Home</a> | <a href="<!-- tmpl_var PROGRAM_URL -->?f=profile_logout">Logout</a>]
+			[<a href="<!-- tmpl_var PROGRAM_URL -->/profile/">Profile Home</a> | <a href="<!-- tmpl_var PROGRAM_URL -->/profile_logout/">Logout</a>]
 		<!-- tmpl_else --> 
-			[<a href="<!-- tmpl_var PROGRAM_URL -->?f=profile_login">Profile Register/Log In</a>] (<a href="<!-- tmpl_var PROGRAM_URL -->?f=profile_help">What's This?</a>)
+			[<a href="<!-- tmpl_var PROGRAM_URL -->/profile_login/">Profile Register/Log In</a>] (<a href="<!-- tmpl_var PROGRAM_URL -->/profile_help/">What's This?</a>)
 		<!-- /tmpl_if --> 
 		
 
