--- a/dada/DADA/Template/templates/default_admin_template.tmpl
+++ b/dada/DADA/Template/templates/default_admin_template.tmpl
@@ -18,7 +18,9 @@
 <!-- tmpl_if FCKEDITOR_URL --> 
 	<script src="<!-- tmpl_var FCKEDITOR_URL -->/fckeditor.js" type="text/javascript"></script>
 <!-- /tmpl_if -->
-
+<!-- tmpl_if CKEDITOR_URL --> 
+	<script src="<!-- tmpl_var CKEDITOR_URL -->/ckeditor.js"  type="text/javascript" ></script>
+<!-- /tmpl_if --> 
 
  <meta http-equiv="Pragma"  content="no-cache" />
  <meta http-equiv="Expires" content="-1" />
