--- a/dada/DADA/Template/templates/example_dada_config.tmpl
+++ b/dada/DADA/Template/templates/example_dada_config.tmpl
@@ -17,7 +17,7 @@ $PROGRAM_USAGE_LOG        = $LOGS . '/dada.txt';
 # Start Root Password
 
 $PROGRAM_ROOT_PASSWORD    = '<!-- tmpl_var ROOT_PASSWORD -->';
-$ROOT_PASS_IS_ENCRYPTED   = '<!-- tmpl_var ROOT_PASS_IS_ENCRYPTED -->'; 
+$ROOT_PASS_IS_ENCRYPTED   = '<!-- tmpl_var ROOT_PASS_IS_ENCRYPTED -->';
 
 # End Root Password
 
@@ -32,6 +32,7 @@ $SETTINGS_DB_TYPE         = 'SQL';
 $SESSION_DB_TYPE          = 'SQL'; 
 $BOUNCE_SCORECARD_DB_TYPE = 'SQL';
 $CLICKTHROUGH_DB_TYPE     = 'SQL'; 
+
 
 %SQL_PARAMS = ( 
 
@@ -60,8 +61,7 @@ $CLICKTHROUGH_DB_TYPE     = 'SQL';
 	settings_table                  => 'dada_settings', 
 	session_table                   => 'dada_sessions', 
 	bounce_scores_table             => 'dada_bounce_scores',
-	clickthrough_urls_table         => 'dada_clickthrough_urls',
-
+	clickthrough_urls_table         => 'dada_clickthrough_urls', 
 
 );
 
@@ -73,7 +73,8 @@ $LIST_IN_ORDER = 1;
 
 
 
-# Dada Mail Profile Options
+=cut
+# start cut for Dada Mail Profile Options
 
 $PROFILE_ENABLED                         = 1; 
 $PROFILE_EMAIL                           = ''; 
@@ -91,7 +92,12 @@ $PROFILE_GRAVATAR_OPTIONS = {
 	default_gravatar_url => undef, 
 };
 
-#/ Dada Mail Profile Options
+=cut
+#/ end cut for Dada Mail Profile Options
+
+
+
+
 
 
 # start cut for list settings defaults
@@ -171,7 +177,7 @@ $PLUGIN_CONFIGS = {
         Default_List                        => undef, 
         Entries                             => undef, 
         Style                               => undef, 
-		Allow_QS_Overrides                  => undef,
+		Allow_QS_Overrides                  => undef, 
         Template                            => undef, 
 
     }, 
@@ -195,21 +201,26 @@ $PLUGIN_CONFIGS = {
 # start cut for list control panel menu
 =cut
 
-$S_PROGRAM_URL            = $PROGRAM_URL; 
-
+$S_PROGRAM_URL            = $PROGRAM_URL
 my $PLUGIN_URL            = $S_PROGRAM_URL; 
    $PLUGIN_URL            =~ s/\/(\w+)\.(cgi|pl)$/\//;
    $PLUGIN_URL           .= 'plugins';
 my $EXT_URL = $PLUGIN_URL; 
    $EXT_URL =~ s/plugins/extensions/; 
-   
+
 $ADMIN_MENU = [
 
-	{-Title      => 'Send a Message',
-	 -Title_URL  => "$S_PROGRAM_URL?f=send_email",
-	 -Function   => 'send_email',
+	{-Title      => 'Mass Mailing',
 	 -Activated  => 1,
 	 -Submenu    => [
+
+					{ 
+					-Title      => 'Send a Message',
+					 -Title_URL  => "$S_PROGRAM_URL?f=send_email",
+					 -Function   => 'send_email',
+					 -Activated  => 1,
+					},
+
 					{-Title      => 'Send a Webpage',
 					 -Title_URL  => "$S_PROGRAM_URL?f=send_url_email",
 					 -Function   => 'send_url_email',
@@ -225,7 +236,7 @@ $ADMIN_MENU = [
 			]
 	},
 
-	{-Title      => 'Manage List',
+	{-Title      => 'Your Mailing List',
 	 -Activated  => 1,
 	 -Submenu    => [
 					{-Title      => 'Change List Information',
@@ -252,7 +263,7 @@ $ADMIN_MENU = [
 					 -Activated  => 1,
 					},
 
-					{-Title      => 'Delete This List',
+					{-Title      => 'Delete This Mailing List',
 					 -Title_URL  => "$S_PROGRAM_URL?f=delete_list",
 					 -Function   => 'delete_list',
 					 -Activated  => 0,
@@ -260,7 +271,7 @@ $ADMIN_MENU = [
 			]
 	},
 
-	{-Title      => 'Manage Subscribers',
+	{-Title      => 'Your Subscribers',
 	 -Activated  => 1,
 	 -Submenu    => [
 					{-Title      => 'View',
@@ -281,30 +292,18 @@ $ADMIN_MENU = [
 					 -Activated  => 1,
 					},
 
-					{-Title      => 'Statistics', 
-					 -Title_URL  =>  "$S_PROGRAM_URL?f=list_stats",
-					 -Function   => 'list_stats',
-					 -Activated  => 1,
-					},
-
 					{-Title      => 'Options', 
 					 -Title_URL  =>  "$S_PROGRAM_URL?f=subscription_options",
 					 -Function   => 'subscription_options',
 					 -Activated  => 0,
 					},
 
-                    {
-                    -Title      => 'Subscriber Profile Fields',
-                    -Title_URL  => "$S_PROGRAM_URL?f=subscriber_fields",
-                    -Function   => 'subscriber_fields',
-                    -Activated  => 1,
-                    },
 
 
 			]
 	},
 
-	{-Title     => 'Manage List Archive',
+	{-Title     => 'Message Archives',
 	 -Activated => 1,
 	 -Submenu   => [
 					{-Title      => 'View Archive',
@@ -321,10 +320,18 @@ $ADMIN_MENU = [
 			]
 	},
 
-	{-Title      => 'Manage Copy',
+
+	{-Title      => 'Appearance and Templates',
 	 -Activated  => 1,
 	 -Submenu    => [
-					{-Title      => 'Email Templates',
+					{-Title      => 'Your Mailing List Template',
+					 -Title_URL  => "$S_PROGRAM_URL?f=edit_template",
+					 -Function   => 'edit_template',
+					 -Activated  => 1,
+					},
+
+
+					{-Title      => 'Email Message Templates',
 					 -Title_URL  => "$S_PROGRAM_URL?f=edit_type",
 					 -Function   => 'edit_type',
 					 -Activated  => 1,
@@ -336,32 +343,41 @@ $ADMIN_MENU = [
 					 -Activated  => 1,
 					},
 
-					{-Title      => 'Create a Back Link',
-					 -Title_URL  => "$S_PROGRAM_URL?f=back_link",
-					 -Function   => 'back_link',
-					 -Activated  => 1,
-					},
-			]
-	},
-
-	{-Title      => 'Manage Appearance',
-	 -Activated  => 1,
-	 -Submenu    => [
-					{-Title      => 'Your Mailing List Template',
-					 -Title_URL  => "$S_PROGRAM_URL?f=edit_template",
-					 -Function   => 'edit_template',
-					 -Activated  => 1,
-					},
 
 					{-Title      => 'Subscription Form HTML',
 					 -Title_URL  => "$S_PROGRAM_URL?f=html_code",
 					 -Function   => 'html_code',
 					 -Activated  => 1,
 					},
+
+					{-Title      => 'Create a Back Link',
+					 -Title_URL  => "$S_PROGRAM_URL?f=back_link",
+					 -Function   => 'back_link',
+					 -Activated  => 1,
+					},
+
+
+
 			]
 	},
 
-	{-Title      => 'Manage List Control Panel',
+
+	{-Title     => 'Profiles',
+	 -Activated => 1,
+	 -Submenu   => [
+				     {
+				     -Title      => 'Profile Fields',
+				     -Title_URL  => "$S_PROGRAM_URL?f=subscriber_fields",
+				     -Function   => 'subscriber_fields',
+				     -Activated  => 1,
+				     },
+			]
+	},
+
+
+
+
+	{-Title      => 'Your List Control Panel',
 	 -Activated  => 0,
 	 -Submenu    => [
 				{-Title      => 'Customize Feature Set',
@@ -483,19 +499,11 @@ $ADMIN_MENU = [
 #					 -Activated  => 1,
 #					},
 
-#					{-Title      => 'Update Subscriptions',
-#					 -Title_URL  => $EXT_URL."/update_subscription.cgi",
-#					 -Function   => 'update_subscription',
-#					 -Activated  => 1,
-#					},
-
-
 #					{-Title      => 'Ajax\'d Subscription Form',
 #					 -Title_URL  => $EXT_URL."/ajax_include_subscribe.cgi?mode=html",
 #					 -Function   => 'ajax_include_subscribe',
 #					 -Activated  => 1,
 #					},
-
 
 #					{-Title      => 'Archive Blog Index',
 #					 -Title_URL  => $EXT_URL."/blog_index.cgi?mode=html&list=<!-- tmpl_var LT_CHAR -->!-- tmpl_var list_settings.list --<!-- tmpl_var GT_CHAR -->",
