removed mail.cgi' view_list_options(), but put the functionality in list_cp_options()

--- a/dada/DADA/Template/templates/list_cp_options.tmpl
+++ b/dada/DADA/Template/templates/list_cp_options.tmpl
@@ -56,6 +56,21 @@
 </fieldset> 
 
 
+
+
+<fieldset> 
+	<legend>
+	Subscription Tables
+	</legend>
+	<p>
+	 Show <!-- tmpl_var vlsn_menu --> addresses at once, in the View and Search subscription tables.
+	</p>
+
+</fieldset> 
+
+
+
+
 <fieldset> 
 
 <legend>
