--- a/dada/DADA/Template/templates/list_search_form_widget.tmpl
+++ b/dada/DADA/Template/templates/list_search_form_widget.tmpl
@@ -3,7 +3,7 @@
     <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="get">
      <p>
       <label for="keyword">
-       Search
+       Search <!-- tmpl_var type_title --> Subscribers
       </label>
        List for a Particular Address:
       <br />
