--- a/dada/DADA/Template/templates/view_list_screen.tmpl
+++ b/dada/DADA/Template/templates/view_list_screen.tmpl
@@ -18,6 +18,20 @@
 	
 <!-- /tmpl_if -->
 
+<!-- tmpl_if approved_count --> 
+	<p class="positive">
+	 <!-- tmpl_var name="approved_count" --> address(es) have been approved for subscription.
+	</p>
+<!-- /tmpl_if --> 
+<!-- tmpl_if denied_count --> 
+	<p class="positive">
+	 <!-- tmpl_var name="denied_count" --> address(es) have been denied a subscription.
+	</p>
+<!-- /tmpl_if -->
+
+
+
+
 <!-- tmpl_if list_type_isa_list -->
 	
 	<h1>
@@ -51,24 +65,6 @@
 	</p>
 	
 <!--/tmpl_if-->
-
-
-
-<!--
-
-<tmpl_if list_type_isa_testers>
-	
-	<h1>
-	 Your Testers
-	</h1>
-	<p>
-	 The Testers List is a list of addresses send to when sending out test messages.
-	</p>
-	
-</tmpl_if>
-
---> 
-
 
 <!-- tmpl_if list_type_isa_black_list -->
 	
@@ -123,7 +119,7 @@
 <!-- tmpl_unless num_subscribers -->
 	
 	<p class="error">
-	 Currently, there are no <!-- tmpl_var type_title --> subscribed.
+	 Currently, there are no <!-- tmpl_var type_title -->.
 	</p>
 	
 <!--/tmpl_unless-->
@@ -148,19 +144,20 @@
     <strong>
      <!-- tmpl_var name="num_subscribers" -->
     </strong>
-    <a href="<!-- tmpl_var S_PROGRAM_URL -->?f=add&amp;type=<!-- tmpl_var type -->">
-     add...
-    </a>
-   </p>
+    <!-- tmpl_unless list_type_isa_sub_request_list -->
+		<a href="<!-- tmpl_var S_PROGRAM_URL -->?f=add&amp;type=<!-- tmpl_var type -->">
+     		add...
+    	</a>
+   	<!-- /tmpl_unless --> 
+	</p>
   </td>
  </tr>
 </table>
 
 
 <form name="email_form" action="<!-- tmpl_var S_PROGRAM_URL -->" method="post">
-
+	
  <!-- tmpl_include view_list_table_widget.tmpl --> 
- 
  <!-- tmpl_include view_list_prev_next_table.tmpl -->
  <p align="center">
   <a href="#" onclick="SetChecked(1);return false;">
@@ -171,25 +168,46 @@
    uncheck all
   </a>
  </p>
- <input type=hidden name="process" value="delete" />
- <input type=hidden name="f"       value="checker" />
- <input type=hidden name="type" value="<!-- tmpl_var type -->" />
- <div class="buttonfloat">
-  <input type="submit" class="alertive" value="Unsubscribe Checked Subscribers" />
- </div>
-</form>
-<div class="floatclear"></div> 
 
+<!-- tmpl_unless list_type_isa_sub_request_list -->
 
-<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="get">
+	 <input type=hidden name="process" value="delete" />
+	 <input type=hidden name="f"       value="checker" />
+	 <input type=hidden name="type" value="<!-- tmpl_var type -->" />
+	 <div class="buttonfloat">
+	  <input type="submit" class="alertive" value="Unsubscribe Checked '<!-- tmpl_var type_title -->' Subscribers" />
+	 </div>
+
+	<div class="floatclear"></div> 
+
+<!-- tmpl_else --> 
+	<div class="buttonfloat">
+	 <input type=hidden name="f"       value="subscription_requests" />
 	
- <input type=hidden name="f"       value="remove_all_subscribers" />
- <input type=hidden name="type" value="<!-- tmpl_var type -->" />
- <div class="buttonfloat">
-  <input type="submit" class="alertive" value="Unsubscribe ALL <!-- tmpl_var type_title --> Subscribers" />
- </div>
+	<!-- hopefully ,this is, "sub_request_list" --> 
+	 <input type=hidden name="type" value="<!-- tmpl_var type -->" />
+	 <input type="submit" name="process" class="processing" value="Approve Checked Subscription Requests" />
+	 <input type="submit" name="process" class="alertive" value="Deny Checked Subscription Requests" />
+	</div>
+	<div class="floatclear"></div>
+<!-- /tmpl_unless --> 
+
 </form>
-<div class="floatclear"></div>
+
+<!-- tmpl_unless list_type_isa_sub_request_list -->
+	<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="get">
+	 <input type=hidden name="f"       value="remove_all_subscribers" />
+	 <input type=hidden name="type" value="<!-- tmpl_var type -->" />
+	 <div class="buttonfloat">
+	  <input type="submit" class="alertive" value="Unsubscribe ALL '<!-- tmpl_var type_title -->' Subscribers" />
+	 </div>
+	</form>
+	<div class="floatclear"></div>
+<!-- tmpl_else --> 
+	<!-- ... --> 
+<!-- /tmpl_unless --> 
+
+
 <!-- tmpl_if list_type_isa_black_list -->
 
 
