Some cleaning up to the new, "Subscription Approval" Feature

--- a/dada/DADA/Template/templates/list_type_switch_widget.tmpl
+++ b/dada/DADA/Template/templates/list_type_switch_widget.tmpl
@@ -19,19 +19,23 @@
   
 </div>
 
-<div>
+
+<!-- tmpl_if flavor_is_view_list --> 
+	<!-- tmpl_if list_settings.enable_subscription_approval_step -->
+		<div>
+		<!-- tmpl_if list_type_isa_sub_request_list -->
+			  <span>
+			   Subscription Requests (<!-- tmpl_var sub_request_list_subscribers_num -->)
+			  </span>
+		<!-- tmpl_else -->
+			  <a href="<!-- tmpl_var PROGRAM_NAME-->?f=<!-- tmpl_var flavor -->&amp;type=sub_request_list&keyword=<!-- tmpl_var keyword escape="HTML" -->">
+			   Subscription Requests  (<!-- tmpl_var sub_request_list_subscribers_num -->)
+			  </a>
+		<!-- /tmpl_if -->
   
-<!-- tmpl_if list_type_isa_sub_request_list -->
-	  <span>
-	   Subscription Requests (<!-- tmpl_var sub_request_list_subscribers_num -->)
-	  </span>
-<!-- tmpl_else -->
-	  <a href="<!-- tmpl_var PROGRAM_NAME-->?f=<!-- tmpl_var flavor -->&amp;type=sub_request_list&keyword=<!-- tmpl_var keyword escape="HTML" -->">
-	   Subscription Requests  (<!-- tmpl_var sub_request_list_subscribers_num -->)
-	  </a>
-<!-- /tmpl_if -->
-  
-</div>
+		</div>
+	<!-- /tmpl_if --> 
+<!-- /tmpl_if --> 
 
 
 
