These changes make Dada Mail 3.0 into Dada Mail 4.0. Yeah!

--- a/dada/DADA/Template/templates/manage_script_screen.tmpl
+++ b/dada/DADA/Template/templates/manage_script_screen.tmpl
@@ -214,7 +214,7 @@
 
 <form action="http://dadamailproject.com/cgi-bin/dada/mail.cgi" method="get" target="_blank">
  <input type="hidden" name="f"      value="subscribe" />
- <input type="hidden" name="list"   value="skazat_design_newsletter" />
+ <input type="hidden" name="list"   value="dada_announce" />
  <input type="text"   name="email"  value="<!-- tmpl_var name="list_owner_email" -->" size="24" maxlength="1024" />
  <input type="submit" class="processing" value="Subscribe" />
 </form>
