--- a/dada/DADA/Template/templates/partial_sending_options_widget.tmpl
+++ b/dada/DADA/Template/templates/partial_sending_options_widget.tmpl
@@ -77,26 +77,34 @@
 			var al         = new Array();; 
 			var alternative_lists = ''; 
 			var multi_list_send_no_dupes = 0; 
+				
+				/* Is there a prototype.js way of doing this? */
 			
-			/* Is there a prototype.js way of doing this? */
-			if (document.getElementById('alternative_list') != null) {
-			
-				var c_value = "";
-				for (var i=0; i < document.send_email.alternative_list.length; i++)
-				   {
-				   if (document.send_email.alternative_list[i].checked)
-				      {
-				      	al.push(document.send_email.alternative_list[i].value);
-					 }
-				   }
+				if (document.getElementById('alternative_list') != null) {
+					/* This basically says that if we have one, but it has no length, 
+					   only one element. Which is ridiculous. */ 
+						
+					if(document.send_email.alternative_list.length){ 
+						for (var i=0; i < document.send_email.alternative_list.length; i++)
+						{
+				   			if (document.send_email.alternative_list[i].checked)
+				      		{
+				      			al.push(document.send_email.alternative_list[i].value);
+					 		}
+				   		}
+					}
+					else { 
+						if(document.send_email.alternative_list.checked) 
+						{  
+							al.push(document.getElementById('alternative_list').value);
+						}
+					}
 				alternative_lists = al.join(','); 
 			}
 				
-
 			if (document.getElementById('multi_list_send_no_dupes') != null) {
 				multi_list_send_no_dupes = $F('multi_list_send_no_dupes'); 
 			}
-			//alert('alternative_list ' + alternative_list); 
 			new Ajax.Updater(
 		
 				'previewMessageReceivers', '<!-- tmpl_var S_PROGRAM_URL -->', 
