Errors in these files... fixed!

--- a/dada/DADA/Template/templates/example_dada_config.tmpl
+++ b/dada/DADA/Template/templates/example_dada_config.tmpl
@@ -201,7 +201,7 @@ $PLUGIN_CONFIGS = {
 # start cut for list control panel menu
 =cut
 
-$S_PROGRAM_URL            = $PROGRAM_URL
+$S_PROGRAM_URL            = $PROGRAM_URL;
 my $PLUGIN_URL            = $S_PROGRAM_URL; 
    $PLUGIN_URL            =~ s/\/(\w+)\.(cgi|pl)$/\//;
    $PLUGIN_URL           .= 'plugins';
