BUGFIX:  2871105  	 4.0.0 b1 - "dada_profiles" table not set correctly Hat Tip: http://benreed.com

--- a/dada/DADA/Template/templates/example_dada_config.tmpl
+++ b/dada/DADA/Template/templates/example_dada_config.tmpl
@@ -54,7 +54,7 @@ $CLICKTHROUGH_DB_TYPE     = 'SQL';
 	pass             => '',
 
 	subscriber_table                => 'dada_subscribers',
-	profile_table                   => 'dada_profile', 
+	profile_table                   => 'dada_profiles', 
 	profile_fields_table 	        => 'dada_profile_fields', 
 	profile_fields_attributes_table => 'dada_profile_fields_attributes',
 	archives_table                  => 'dada_archives', 
