BUGFIX: 2874189  	 4.0.0 b1 - unended HTML comment breaks functionality http://sourceforge.net/tracker/?func=detail&aid=2874189&group_id=13002&atid=113002
hat tip: Martyn Davison

--- a/dada/DADA/Template/templates/multiple_list_sending_widget.tmpl
+++ b/dada/DADA/Template/templates/multiple_list_sending_widget.tmpl
@@ -75,7 +75,7 @@
 		
 		<!-- tmpl_else --> 
 	
-			<!-- multiple list sending is not supported (apparently) 
+			<!-- multiple list sending is not supported (apparently) -->
 	
 		<!-- /tmpl_if -->
 	
